--- a/IdentityServerDemo/IdentityServerDemo/appsettings.json
+++ b/IdentityServerDemo/IdentityServerDemo/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityServer;Trusted_Connection=True"
+
+  }
 }
