--- a/WeatherAPI/WeatherMvc/appsettings.json
+++ b/WeatherAPI/WeatherMvc/appsettings.json
@@ -1,12 +1,12 @@
 {
   "IdentityServerSettings": {
-    "DiscoveryUrl": "https://localhost:44323",
+    "DiscoveryUrl": "http://localhost:44323",
     "ClientName": "m2m.client",
     "ClientPassword": "SuperSecretPassword",
-    "UseHttps": true
+    "UseHttps": false
   },
   "InteractiveServiceSettings": {
-    "AuthorityUrl": "https://localhost:44323",
+    "AuthorityUrl": "http://localhost:44323",
     "ClientId": "interactive",
     "ClientSecret": "SuperSecretPassword",
     "Scopes": [ "weatherapi.read" ]
