Changes to Docker code implementation

--- a/IdentityServerDemo/IdentityServerDemo/appsettings.json
+++ b/IdentityServerDemo/IdentityServerDemo/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityServer;Trusted_Connection=True"
+    "IdentityConnection": "Server=192.168.254.103,1433;Initial Catalog=master;User Id=sa;Password=test123;MultipleActiveResultSets=True;"
 
   }
 }
