--- a/WeatherAPI/WeatherMvc/appsettings.json
+++ b/WeatherAPI/WeatherMvc/appsettings.json
@@ -1,12 +1,12 @@
 {
   "IdentityServerSettings": {
-    "DiscoveryUrl": "http://localhost:44323",
+    "DiscoveryUrl": "http://host.docker.internal:44323",
     "ClientName": "m2m.client",
     "ClientPassword": "SuperSecretPassword",
     "UseHttps": false
   },
   "InteractiveServiceSettings": {
-    "AuthorityUrl": "http://localhost:44323",
+    "AuthorityUrl": "http://192.168.254.103:44323",
     "ClientId": "interactive",
     "ClientSecret": "SuperSecretPassword",
     "Scopes": [ "weatherapi.read" ]
@@ -18,15 +18,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndPoints": {
-      "Http1": {
-        "Url": "http://localhost:5001"
-      },
-      "HttpsInlineCertFile": {
-        "Url": "https://localhost:5444"
-      }
-    }
-  }
+  "AllowedHosts": "*"
+  //"Kestrel": {
+  //  "EndPoints": {
+  //    "Http1": {
+  //      "Url": "http://localhost:5001"
+  //    },
+  //    "HttpsInlineCertFile": {
+  //      "Url": "https://localhost:5444"
+  //    }
+  //  }
+  //}
 }
