--- a/WeatherAPI/WeatherMvc/appsettings.json
+++ b/WeatherAPI/WeatherMvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "IdentityServerSettings": {
-    "DiscoveryUrl": "http://host.docker.internal:44323",
+    //"DiscoveryUrl": "http://host.docker.internal:44323",
+    "DiscoveryUrl": "https://localhost:44323",
     "ClientName": "m2m.client",
     "ClientPassword": "SuperSecretPassword",
     "UseHttps": false
